# srs.ly

./: .env.example  .eslintcache  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: config.json.example  pyproject.toml
backend/srsly/: app.py  hypothesis.py  srsly.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  BasicCard.js  Cards.js  ClozeCard.js  Review.js  ReviewButtons.js  SyncButton.js  card.css
src/: App.js  BasicCard.js  Cards.js  ClozeCard.js  FlashCard.js  Review.js  SyncButton.js  index.js
srsly/: app.py  hypothesis.py  srsly.py
